ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity4/input.ts.stderr
error: Unexpected eof
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity4/input.ts:1:17
  |
1 | foo(/notregexp);
  |                 ^

